--- a/index.html
+++ b/index.html
@@ -1,110 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GitHub Joining Date Finder</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GitHub Profile Finder</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  * { box-sizing: border-box; margin:0; padding:0; }
+  body {
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(135deg,#6a11cb,#2575fc);
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    min-height:100vh;
+    padding:20px;
+  }
 
-    body {
-      font-family: 'Roboto', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-      color: #fff;
-    }
+  .container {
+    background: rgba(255,255,255,0.05);
+    padding: 30px 40px;
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
+    text-align:center;
+    width: 350px;
+    color: #fff;
+    box-shadow: 0 8px 30px rgba(0,0,0,0.4);
+    transition: 0.3s;
+  }
 
-    .container {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px 50px;
-      border-radius: 15px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.3);
-      text-align: center;
-      width: 350px;
-    }
+  .container:hover {
+    transform: translateY(-5px);
+  }
 
-    h1 {
-      margin-bottom: 25px;
-      font-size: 24px;
-    }
+  h1 {
+    margin-bottom: 25px;
+    font-size: 26px;
+  }
 
-    input[type="text"] {
-      width: 100%;
-      padding: 12px 15px;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
+  input {
+    width: 100%;
+    padding: 12px 15px;
+    border-radius: 10px;
+    border:none;
+    margin-bottom:15px;
+    font-size:16px;
+  }
 
-    button {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      background-color: #2575fc;
-      border: none;
-      border-radius: 8px;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+  button {
+    width:100%;
+    padding:12px;
+    font-size:16px;
+    border:none;
+    border-radius:10px;
+    background: #2575fc;
+    color:#fff;
+    cursor:pointer;
+    transition: 0.3s;
+  }
 
-    button:hover {
-      background-color: #6a11cb;
-    }
+  button:hover { background:#6a11cb; }
 
-    .result {
-      margin-top: 20px;
-      font-size: 18px;
-      padding: 15px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 10px;
-      word-wrap: break-word;
-    }
+  .result { margin-top:20px; text-align:center; }
 
-    .error {
-      color: #ff4b5c;
-    }
-  </style>
+  .profile-card {
+    background: rgba(0,0,0,0.3);
+    padding:20px;
+    border-radius:15px;
+    margin-top:15px;
+    text-align:center;
+  }
+
+  .profile-card img {
+    width:100px;
+    height:100px;
+    border-radius:50%;
+    border:3px solid #fff;
+    margin-bottom:10px;
+    transition: 0.3s;
+  }
+
+  .profile-card img:hover {
+    transform: scale(1.1);
+  }
+
+  .profile-card h2 { margin:10px 0 5px; font-size:20px; }
+  .profile-card p { font-size:14px; margin:5px 0; }
+  .badges { display:flex; justify-content:center; gap:10px; margin-top:10px; }
+  .badge {
+    background: rgba(255,255,255,0.1);
+    padding:5px 10px;
+    border-radius:8px;
+    font-size:14px;
+  }
+
+  .error { color:#ff4b5c; font-weight:bold; margin-top:10px; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>GitHub Joining Date Finder</h1>
-    <input type="text" id="username" placeholder="Enter GitHub username">
-    <button onclick="getJoinDate()">Find Joining Date</button>
-    <div id="result" class="result"></div>
-  </div>
+<div class="container">
+  <h1>GitHub Profile Finder</h1>
+  <input type="text" id="username" placeholder="Enter GitHub username">
+  <button onclick="getProfile()">Search</button>
+  <div id="result" class="result"></div>
+</div>
 
-  <script>
-    async function getJoinDate() {
-      const username = document.getElementById('username').value.trim();
-      const resultDiv = document.getElementById('result');
+<script>
+async function getProfile() {
+  const username = document.getElementById('username').value.trim();
+  const resultDiv = document.getElementById('result');
 
-      if (!username) {
-        resultDiv.innerHTML = '<span class="error">Please enter a username!</span>';
-        return;
-      }
+  if(!username){
+    resultDiv.innerHTML = '<div class="error">Please enter a username!</div>';
+    return;
+  }
 
-      resultDiv.innerHTML = '⏳ Fetching...';
+  resultDiv.innerHTML = '⏳ Fetching profile...';
 
-      try {
-        const response = await fetch(`https://api.github.com/users/${username}`);
-        if (!response.ok) throw new Error('User not found');
+  try{
+    const response = await fetch(`https://api.github.com/users/${username}`);
+    if(!response.ok) throw new Error('User not found');
 
-        const data = await response.json();
-        const joinDate = new Date(data.created_at).toLocaleDateString('en-GB', {
-          day: 'numeric', month: 'long', year: 'numeric'
-        });
+    const data = await response.json();
+    const joinDate = new Date(data.created_at).toLocaleDateString('en-GB', {
+      day:'numeric', month:'long', year:'numeric'
+    });
 
-        resultDiv.innerHTML = `✅ <strong>${username}</strong> joined GitHub on <strong>${joinDate}</strong>`;
-      } catch (err) {
-        resultDiv.innerHTML = `<span class="error">❌ ${err.message}</span>`;
-      }
-    }
-  </script>
+    resultDiv.innerHTML = `
+      <div class="profile-card">
+        <img src="${data.avatar_url}" alt="${data.login}">
+        <h2>${data.name ? data.name : data.login}</h2>
+        <p>${data.bio ? data.bio : 'No bio available'}</p>
+        <div class="badges">
+          <div class="badge">Repos: ${data.public_repos}</div>
+          <div class="badge">Followers: ${data.followers}</div>
+          <div class="badge">Following: ${data.following}</div>
+        </div>
+        <p>Joined GitHub: <strong>${joinDate}</strong></p>
+        <p><a href="${data.html_url}" target="_blank" style="color:#fff;text-decoration:underline;">Visit Profile</a></p>
+      </div>
+    `;
+  } catch(err){
+    resultDiv.innerHTML = `<div class="error">❌ ${err.message}</div>`;
+  }
+}
+</script>
 </body>
 </html>
